# private-dashboard

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  STATUS.md  docker-compose.yml  openapi.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MetricDetail.jsx  Sparkline.jsx  StatCard.jsx
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: api_tests.rs
