[package]
name = "private-dashboard"
version = "0.1.0"
edition = "2021"
description = "Local network stats dashboard for HNR ecosystem"
license = "MIT"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rocket_cors = "0.6"

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
